adding nav structure giving nav titles

--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Google font link -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+    </style>
     <title>Dev-Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <h1>Hello!! world</h1>
+  <body class="open-sans-normal">
+    <header>
+      <nav>
+        <h3 id="nav-title">Ma<span style="color: #fd6e0a">r</span>y</h3>
+        <ul>
+          <li>Portfolio</li>
+          <li>Blog</li>
+          <li><button>Hire me</button></li>
+        </ul>
+      </nav>
+    </header>
+    <main></main>
+    <footer></footer>
   </body>
 </html>
