--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="open-sans-normal">
     <header>
       <nav>
-        <h3 id="nav-title">Ma<span style="color: #fd6e0a">r</span>y</h3>
+        <h3 id="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
           <li>Portfolio</li>
           <li>Blog</li>
