--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <nav>
         <h3 id="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
-          <li>Portfolio</li>
-          <li>Blog</li>
-          <li><button>Hire me</button></li>
+          <li><a class="dark-2" href="">Portfolio</a></li>
+          <li><a class="dark-2" href="">Blog</a></li>
+          <li>
+            <a href=""><button>Hire Me</button></a>
+          </li>
         </ul>
       </nav>
     </header>
