--- a/index.html
+++ b/index.html
@@ -18,10 +18,25 @@
           <li><a class="dark-2" href="">Portfolio</a></li>
           <li><a class="dark-2" href="">Blog</a></li>
           <li>
-            <a href=""><button>Hire Me</button></a>
+            <a href=""><button class="btn-primary">Hire Me</button></a>
           </li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="dark-2" style="font-weight: 600; font-size: 45px">
+            Hi, I am
+          </h4>
+          <h2 style="font-size: 85px">Mary Hardy</h2>
+          <p class="dark-3">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary">Download Cv</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img src="images/hardy.png" alt="Portfolio" />
+      </div>
     </header>
     <main></main>
     <footer></footer>
