added bg imgs on header section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>Dev-Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="open-sans-normal">
-    <header>
+  <body style="margin: 0%" class="open-sans-normal">
+    <header id="header">
       <nav>
         <h3 id="nav-title">Ma<span class="text-primary">r</span>y</h3>
         <ul>
@@ -35,7 +35,7 @@
           <button class="btn-primary">Download Cv</button>
           <button class="btn-primary">Contact</button>
         </div>
-        <img src="images/hardy.png" alt="Portfolio" />
+        <img id="dev-img" src="images/hardy.png" alt="Portfolio" />
       </div>
     </header>
     <main></main>
