--- a/index.html
+++ b/index.html
@@ -49,6 +49,24 @@
             resulfs while working with me. Delivering work within time and
             budget which meets clients requirements in our mata.
           </p>
+          <div class="about-items">
+            <div class="item">
+              <p class="item-title">Name:</p>
+              <p class="item-discription">Mary Hardy</p>
+            </div>
+            <div class="item">
+              <p class="item-title">Email:</p>
+              <p class="item-discription">info@gmail.com</p>
+            </div>
+            <div class="item">
+              <p class="item-title">Date of birth:</p>
+              <p class="item-discription">11 November 1987</p>
+            </div>
+            <div class="item">
+              <p class="item-title">From:</p>
+              <p class="item-discription">Los Angeles, USA</p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
